// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots 4 Components/All/Advertising Container Failed To Load Example 1`] = `
<div
  style={
    Object {
      "margin": "20px",
      "width": "600px",
    }
  }
>
  <div
    className="AdvertisingContainer__Outer-sc-1oly5nh-0 dxWicc advertising_container"
  >
    <p
      className="AdvertisingContainer__AdvertisingNotice-sc-1oly5nh-1 goXryU"
    >
      Advertisement
    </p>
    <p>
      Advertisement failed to load
    </p>
  </div>
</div>
`;

exports[`Storyshots 4 Components/All/Advertising Container Mpu Example 1`] = `
<div
  style={
    Object {
      "height": "270px",
      "margin": "20px",
      "width": "320px",
    }
  }
>
  <div
    className="AdvertisingContainer__Outer-sc-1oly5nh-0 dxWicc advertising_container"
  >
    <p
      className="AdvertisingContainer__AdvertisingNotice-sc-1oly5nh-1 goXryU"
    >
      Advertisement
    </p>
    <div
      style={
        Object {
          "background": "grey",
          "height": "250px",
          "width": "300px",
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots 4 Components/All/Advertising Container Native Example 1`] = `
<div
  style={
    Object {
      "margin": "20px",
      "width": "600px",
    }
  }
>
  <div
    className="AdvertisingContainer__Outer-sc-1oly5nh-0 dxWicc advertising_container"
  >
    <div
      style={
        Object {
          "background": "grey",
          "height": "400px",
          "width": "580px",
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots 4 Components/All/Article Keywords Normal 1`] = `
<div
  className="ArticleKeywords__Outer-sc-1i3vk64-0 fjWRJW"
>
  <a
    className="ArticleKeywords__FilterLink-sc-1i3vk64-1 fXCFYM"
    href="#1"
    title="Show all Covid-19 articles"
  >
    Covid-19
  </a>
  <a
    className="ArticleKeywords__FilterLink-sc-1i3vk64-1 fXCFYM"
    href="#2"
    title="Show all BFI National Archive articles"
  >
    BFI National Archive
  </a>
  <a
    className="ArticleKeywords__FilterLink-sc-1i3vk64-1 fXCFYM"
    href="#3"
    title="Show all Video articles"
  >
    Video
  </a>
</div>
`;

exports[`Storyshots 4 Components/All/Blockquote With Citation 1`] = `
<blockquote
  className="Blockquote__Outer-iubc6-0 kNZZIq"
>
  <q
    className="Blockquote__Quote-iubc6-1 kIpPo"
  >
    Yeah, but your scientists were so preoccupied with whether or not they could, they didn't stop to think if they should.
  </q>
  <cite
    className="Blockquote__Citation-iubc6-2 hsCNAO"
  >
    Ian Malcolm
  </cite>
</blockquote>
`;

exports[`Storyshots 4 Components/All/Blockquote Without Citation 1`] = `
<blockquote
  className="Blockquote__Outer-iubc6-0 kNZZIq"
>
  <q
    className="Blockquote__Quote-iubc6-1 kIpPo"
  >
    Yeah, but your scientists were so preoccupied with whether or not they could, they didn't stop to think if they should.
  </q>
</blockquote>
`;

exports[`Storyshots 4 Components/All/Breadcrumbs Normal 1`] = `
Array [
  <ol
    className="Breadcrumbs__Outer-sc-17ixyjm-0 fmmcVi"
  >
    <li
      className="Breadcrumbs__Crumb-sc-17ixyjm-2 fpazhl"
    >
      <a
        className="Breadcrumbs__BreadcrumbLink-sc-17ixyjm-3 Bcgtm"
        data-tracking="breadcrumb"
        href="#1"
      >
        Industry
      </a>
    </li>
    <li
      className="Breadcrumbs__Crumb-sc-17ixyjm-2 fpazhl"
    >
      <a
        className="Breadcrumbs__BreadcrumbLink-sc-17ixyjm-3 Bcgtm"
        data-tracking="breadcrumb"
        href="#2"
      >
        Get funding
      </a>
    </li>
    <li
      className="Breadcrumbs__Crumb-sc-17ixyjm-2 fpazhl"
    >
      Find a fund to create films, TV or new formats of storytelling
    </li>
  </ol>,
  <ol
    className="Breadcrumbs__MobileOuter-sc-17ixyjm-1 bvTzym"
  >
    <li
      className="Breadcrumbs__Crumb-sc-17ixyjm-2 fpazhl"
    >
      <a
        className="Breadcrumbs__BreadcrumbLink-sc-17ixyjm-3 Bcgtm"
        data-tracking="breadcrumb"
        href="#2"
      >
        &lt;  
        Get funding
      </a>
    </li>
  </ol>,
]
`;

exports[`Storyshots 4 Components/All/Breadcrumbs Wrapping 1`] = `
Array [
  <ol
    className="Breadcrumbs__Outer-sc-17ixyjm-0 fmmcVi"
  >
    <li
      className="Breadcrumbs__Crumb-sc-17ixyjm-2 fpazhl"
    >
      <a
        className="Breadcrumbs__BreadcrumbLink-sc-17ixyjm-3 Bcgtm"
        data-tracking="breadcrumb"
        href="#4"
      >
        Industry
      </a>
    </li>
    <li
      className="Breadcrumbs__Crumb-sc-17ixyjm-2 fpazhl"
    >
      <a
        className="Breadcrumbs__BreadcrumbLink-sc-17ixyjm-3 Bcgtm"
        data-tracking="breadcrumb"
        href="#5"
      >
        Get funding
      </a>
    </li>
    <li
      className="Breadcrumbs__Crumb-sc-17ixyjm-2 fpazhl"
    >
      <a
        className="Breadcrumbs__BreadcrumbLink-sc-17ixyjm-3 Bcgtm"
        data-tracking="breadcrumb"
        href="#6"
      >
        Find a fund to create films, TV or new formats of storytelling
      </a>
    </li>
    <li
      className="Breadcrumbs__Crumb-sc-17ixyjm-2 fpazhl"
    >
      Development Fund
    </li>
  </ol>,
  <ol
    className="Breadcrumbs__MobileOuter-sc-17ixyjm-1 bvTzym"
  >
    <li
      className="Breadcrumbs__Crumb-sc-17ixyjm-2 fpazhl"
    >
      <a
        className="Breadcrumbs__BreadcrumbLink-sc-17ixyjm-3 Bcgtm"
        data-tracking="breadcrumb"
        href="#6"
      >
        &lt;  
        Find a fund to create films, TV or new formats of storytelling
      </a>
    </li>
  </ol>,
]
`;

exports[`Storyshots 4 Components/All/Button Primary 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <a
    className="Button__PrimaryButton-sc-1bcggl7-0 eeAcNk"
    href="#1"
    title={false}
  >
    Click me
  </a>
</div>
`;

exports[`Storyshots 4 Components/All/Button Secondary 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <a
    className="Button__SecondaryButton-sc-1bcggl7-2 bxwUna"
    href="#2"
    title={false}
  >
    Click me
  </a>
</div>
`;

exports[`Storyshots 4 Components/All/Button Tertiary 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <a
    className="Button__TertiaryButton-sc-1bcggl7-3 iYJlQy"
    href="#3"
    title={false}
  >
    Click me
  </a>
</div>
`;

exports[`Storyshots 4 Components/All/Call to Action Internal Link 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="CallToAction__Outer-sc-16s1pd-0 wNYxl call_to_action_block"
  >
    <a
      className="Button__PrimaryButton-sc-1bcggl7-0 eeAcNk"
      href="/"
      title={false}
    >
      Internal Link
    </a>
  </div>
</div>
`;

exports[`Storyshots 4 Components/All/Call to Action Two Links 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="CallToAction__Outer-sc-16s1pd-0 wNYxl call_to_action_block"
  >
    <a
      className="Button__PrimaryButton-sc-1bcggl7-0 eeAcNk"
      href="/"
      title={false}
    >
      Internal Link
    </a>
  </div>
  <div
    className="CallToAction__Outer-sc-16s1pd-0 wNYxl call_to_action_block"
  >
    <a
      className="Button__PrimaryButton-sc-1bcggl7-0 eeAcNk"
      href="/"
      title={false}
    >
      Internal Link
    </a>
  </div>
</div>
`;

exports[`Storyshots 4 Components/All/Divider Clear Float 1`] = `
<hr
  className="Divider__Break-sc-8d5zpt-0 fpxQJD"
/>
`;

exports[`Storyshots 4 Components/All/Divider No Spacing 1`] = `
<hr
  className="Divider__Break-sc-8d5zpt-0 bQCqhP"
  spacing="none"
/>
`;

exports[`Storyshots 4 Components/All/Divider Normal 1`] = `
<hr
  className="Divider__Break-sc-8d5zpt-0 EusRW"
/>
`;

exports[`Storyshots 4 Components/All/Divider Transparent 1`] = `
<hr
  className="Divider__Break-sc-8d5zpt-0 fUOKdS"
/>
`;

exports[`Storyshots 4 Components/All/Downloadable File Multiple Files 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="DownloadableFiles__Container-sc-86pcb9-0 cDofHR"
  >
    <div
      className="FileDownload__Outer-v4wl69-0 iSPIBj"
    >
      <a
        className="FileDownload__Link-v4wl69-1 leuXbp"
        download={true}
        href="https://www.bfi.org.uk/sites/bfi.org.uk/files/downloads/bfi-young-audiences-content-fund-production-application-guidelines-2019-10.pdf"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <svg
          height="40"
          viewBox="0 0 30 40"
          width="30"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fillRule="evenodd"
            stroke="none"
            strokeWidth="1"
          >
            <g
              fill="#783DF6"
              fillRule="nonzero"
              transform="translate(-80 -1189)"
            >
              <g
                transform="translate(80 1189)"
              >
                <g>
                  <path
                    d="M16.875 18.443a.937.937 0 00-.938-.938h-1.874a.937.937 0 00-.938.938v6.563H9.306c-.836 0-1.254 1.014-.66 1.603l5.65 5.607a1 1 0 001.408 0l5.65-5.607c.593-.589.176-1.603-.661-1.603h-3.818v-6.563zM28.893 7.655l-6.554-6.553A3.75 3.75 0 0019.691 0H3.75A3.762 3.762 0 000 3.757v32.494A3.75 3.75 0 003.75 40h22.495C28.315 40 30 38.32 30 36.25V10.31c0-.991-.404-1.952-1.107-2.655zm-8.897-3.593l5.945 5.943h-5.945V4.062zM26.25 36.25H3.75V3.757h12.497v8.123a1.87 1.87 0 001.875 1.875h8.128V36.25z"
                  />
                </g>
              </g>
            </g>
          </g>
        </svg>
        <div
          className="FileDownload__FileDetails-v4wl69-2 dOBeMn file-details"
        >
          <span
            className="FileDownload__Title-v4wl69-3 igmiXx file-title"
          >
            File title
          </span>
          <span
            className="FileDownload__Type-v4wl69-4 dJvdio"
          >
            PDF
          </span>
          <span
            className="FileDownload__Size-v4wl69-5 jKJbPh"
          >
            1.2 MB
          </span>
        </div>
      </a>
    </div>
    <div
      className="FileDownload__Outer-v4wl69-0 iSPIBj"
    >
      <a
        className="FileDownload__Link-v4wl69-1 leuXbp"
        download={true}
        href="https://www.bfi.org.uk/sites/bfi.org.uk/files/downloads/bfi-young-audiences-content-fund-production-application-guidelines-2019-10.pdf"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <svg
          height="40"
          viewBox="0 0 30 40"
          width="30"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fillRule="evenodd"
            stroke="none"
            strokeWidth="1"
          >
            <g
              fill="#783DF6"
              fillRule="nonzero"
              transform="translate(-80 -1189)"
            >
              <g
                transform="translate(80 1189)"
              >
                <g>
                  <path
                    d="M16.875 18.443a.937.937 0 00-.938-.938h-1.874a.937.937 0 00-.938.938v6.563H9.306c-.836 0-1.254 1.014-.66 1.603l5.65 5.607a1 1 0 001.408 0l5.65-5.607c.593-.589.176-1.603-.661-1.603h-3.818v-6.563zM28.893 7.655l-6.554-6.553A3.75 3.75 0 0019.691 0H3.75A3.762 3.762 0 000 3.757v32.494A3.75 3.75 0 003.75 40h22.495C28.315 40 30 38.32 30 36.25V10.31c0-.991-.404-1.952-1.107-2.655zm-8.897-3.593l5.945 5.943h-5.945V4.062zM26.25 36.25H3.75V3.757h12.497v8.123a1.87 1.87 0 001.875 1.875h8.128V36.25z"
                  />
                </g>
              </g>
            </g>
          </g>
        </svg>
        <div
          className="FileDownload__FileDetails-v4wl69-2 dOBeMn file-details"
        >
          <span
            className="FileDownload__Title-v4wl69-3 igmiXx file-title"
          >
            Young Audiences Content Fund production application guidelines
          </span>
          <span
            className="FileDownload__Type-v4wl69-4 dJvdio"
          >
            PDF
          </span>
          <span
            className="FileDownload__Size-v4wl69-5 jKJbPh"
          >
            279.06 KB
          </span>
        </div>
      </a>
    </div>
  </div>
</div>
`;

exports[`Storyshots 4 Components/All/Downloadable File Single File 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="DownloadableFiles__Container-sc-86pcb9-0 cDofHR"
  >
    <div
      className="FileDownload__Outer-v4wl69-0 iSPIBj"
    >
      <a
        className="FileDownload__Link-v4wl69-1 leuXbp"
        download={true}
        href="https://www.bfi.org.uk/sites/bfi.org.uk/files/downloads/bfi-young-audiences-content-fund-production-application-guidelines-2019-10.pdf"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <svg
          height="40"
          viewBox="0 0 30 40"
          width="30"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fillRule="evenodd"
            stroke="none"
            strokeWidth="1"
          >
            <g
              fill="#783DF6"
              fillRule="nonzero"
              transform="translate(-80 -1189)"
            >
              <g
                transform="translate(80 1189)"
              >
                <g>
                  <path
                    d="M16.875 18.443a.937.937 0 00-.938-.938h-1.874a.937.937 0 00-.938.938v6.563H9.306c-.836 0-1.254 1.014-.66 1.603l5.65 5.607a1 1 0 001.408 0l5.65-5.607c.593-.589.176-1.603-.661-1.603h-3.818v-6.563zM28.893 7.655l-6.554-6.553A3.75 3.75 0 0019.691 0H3.75A3.762 3.762 0 000 3.757v32.494A3.75 3.75 0 003.75 40h22.495C28.315 40 30 38.32 30 36.25V10.31c0-.991-.404-1.952-1.107-2.655zm-8.897-3.593l5.945 5.943h-5.945V4.062zM26.25 36.25H3.75V3.757h12.497v8.123a1.87 1.87 0 001.875 1.875h8.128V36.25z"
                  />
                </g>
              </g>
            </g>
          </g>
        </svg>
        <div
          className="FileDownload__FileDetails-v4wl69-2 dOBeMn file-details"
        >
          <span
            className="FileDownload__Title-v4wl69-3 igmiXx file-title"
          >
            File title
          </span>
          <span
            className="FileDownload__Type-v4wl69-4 dJvdio"
          >
            PDF
          </span>
          <span
            className="FileDownload__Size-v4wl69-5 jKJbPh"
          >
            1.2 MB
          </span>
        </div>
      </a>
    </div>
  </div>
</div>
`;

exports[`Storyshots 4 Components/All/ErrorPage Error 404 1`] = `
<div
  className="ErrorPage__Wrapper-sc-1xadvd1-0 ErrorPage__ErrorPageWrapper-sc-1xadvd1-1 bqUFOf"
>
  <div
    className="ErrorPage__ErrorContainer-sc-1xadvd1-2 kNOAZT"
  >
    <div
      className="ErrorPage__Content-sc-1xadvd1-7 glQjFW"
    >
      <h1
        className="ErrorPage__Heading-sc-1xadvd1-3 gGKxtI"
      >
        <span
          className="ErrorPage__ErrorNumber-sc-1xadvd1-4 iJOuQl"
        >
          404
        </span>
        <span
          className="ErrorPage__ErrorTitle-sc-1xadvd1-5 iNpVEs"
        >
          Page not found
        </span>
      </h1>
      <div
        className="ErrorPage__ErrorSummary-sc-1xadvd1-6 fxbPzr"
      >
        <p>
          Sorry, something went wrong and we cannot find the page you are looking for.
        </p>
        <p>
          You can try going back or find what you are looking for on another page.
        </p>
      </div>
      <div
        className="ErrorPage__CTAContainer-sc-1xadvd1-9 LFaRE"
      >
        <a
          className="Button__PrimaryButton-sc-1bcggl7-0 eeAcNk"
          href="/"
          title={false}
        >
          Return to home
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots 4 Components/All/ErrorPage Error 500 1`] = `
<div
  className="ErrorPage__Wrapper-sc-1xadvd1-0 ErrorPage__ErrorPageWrapper-sc-1xadvd1-1 bqUFOf"
>
  <div
    className="ErrorPage__ErrorContainer-sc-1xadvd1-2 kNOAZT"
  >
    <div
      className="ErrorPage__Content-sc-1xadvd1-7 glQjFW"
    >
      <h1
        className="ErrorPage__Heading-sc-1xadvd1-3 gGKxtI"
      >
        <span
          className="ErrorPage__ErrorNumber-sc-1xadvd1-4 iJOuQl"
        >
          500
        </span>
        <span
          className="ErrorPage__ErrorTitle-sc-1xadvd1-5 iNpVEs"
        >
          Internal Server Error
        </span>
      </h1>
      <div
        className="ErrorPage__ErrorSummary-sc-1xadvd1-6 fxbPzr"
      >
        <p>
          Sorry, this page doesn't seem to be working.
        </p>
        <p>
          Try to refresh the page, or go back to home.
        </p>
      </div>
      <div
        className="ErrorPage__CTAContainer-sc-1xadvd1-9 LFaRE"
      >
        <a
          className="Button__PrimaryButton-sc-1bcggl7-0 eeAcNk"
          href="/"
          title={false}
        >
          Return to home
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots 4 Components/All/Feedback Form Example 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="FeedbackForm__Outer-sc-2r94a5-0 kqBsOd"
  >
    <button
      className="FeedbackForm__FeedbackBar-sc-2r94a5-1 dyZYRt"
      onClick={[Function]}
      title="Give us some feedback"
    >
      <strong>
        Is something missing from this page?
      </strong>
       Your feedback helps us.
    </button>
  </div>
</div>
`;

exports[`Storyshots 4 Components/All/FilmShowing A Showing 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="FilmShowing__Outer-sc-1jbnzai-0 lleItk"
  >
    <p
      aria-label=""
      className="Headline__H4Fake-uipteu-6 hvLzxR h4"
    >
      La La Land
    </p>
    <p
      className="FilmShowing__Date-sc-1jbnzai-1 dejXg"
    >
      24th February
    </p>
    <ul
      className="FilmShowing__Times-sc-1jbnzai-2 hpHOjB"
    >
      <li
        className="FilmShowing__Time-sc-1jbnzai-3 bGoYUD"
      >
        <a
          className="Button__SecondaryButton-sc-1bcggl7-2 bxwUna"
          href="#"
          time="3:30pm"
          title="Book this at BFI Southbank"
        >
          3:30pm
        </a>
      </li>
      <li
        className="FilmShowing__Time-sc-1jbnzai-3 bGoYUD"
      >
        <a
          className="Button__SecondaryButton-sc-1bcggl7-2 bxwUna"
          href="#"
          time="6:30pm"
          title="Book this at BFI Southbank"
        >
          6:30pm
        </a>
      </li>
      <li
        className="FilmShowing__Time-sc-1jbnzai-3 bGoYUD"
      >
        <span
          className="FilmShowing__SoldOut-sc-1jbnzai-4 brqBWv"
        >
          8:45pm
           - Sold out
        </span>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots 4 Components/All/FilmShowing Sold Out 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="FilmShowing__Outer-sc-1jbnzai-0 lleItk"
  >
    <p
      aria-label=""
      className="Headline__H4Fake-uipteu-6 hvLzxR h4"
    >
      La La Land
    </p>
    <p
      className="FilmShowing__Date-sc-1jbnzai-1 dejXg"
    >
      24th February
    </p>
    <ul
      className="FilmShowing__Times-sc-1jbnzai-2 hpHOjB"
    >
      <li
        className="FilmShowing__Time-sc-1jbnzai-3 bGoYUD"
      >
        <span
          className="FilmShowing__SoldOut-sc-1jbnzai-4 brqBWv"
        >
           - Sold out
        </span>
      </li>
      <li
        className="FilmShowing__Time-sc-1jbnzai-3 bGoYUD"
      >
        <span
          className="FilmShowing__SoldOut-sc-1jbnzai-4 brqBWv"
        >
           - Sold out
        </span>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots 4 Components/All/Filter-esque Links Normal 1`] = `
<nav
  className="FilterLinks__Outer-sc-5q1sf-0 jznYQl filter_links"
>
  <a
    className="FilterLinks__FilterLink-sc-5q1sf-1 dmXOAr"
    disabled={false}
    href="#1"
    title="Show all \\"Example link\\" articles"
  >
    Example link
  </a>
  <a
    className="FilterLinks__FilterLink-sc-5q1sf-1 dmXOAr"
    disabled={false}
    href="#2"
    title="Show all \\"Where to stream\\" articles"
  >
    Where to stream
  </a>
  <a
    className="FilterLinks__FilterLink-sc-5q1sf-1 dmXOAr"
    disabled={false}
    href="#3"
    title="Show all \\"Where to begin\\" articles"
  >
    Where to begin
  </a>
  <a
    className="FilterLinks__FilterLink-sc-5q1sf-1 dmXOAr"
    disabled={false}
    href="#4"
    title="Show all \\"Five Things\\" articles"
  >
    Five Things
  </a>
</nav>
`;

exports[`Storyshots 4 Components/All/Filterable Articles Normal 1`] = `
<p>
  Due to this component requiring connection with the front end framework to pull data from the API, it is not possible to display an example of this component within Storybook.
</p>
`;

exports[`Storyshots 4 Components/All/Headline Hero H 1 1`] = `
<h1
  aria-label=""
  className="Headline__HeroH1-uipteu-0 gDIaDW"
>
  My example headline
</h1>
`;

exports[`Storyshots 4 Components/All/Headline Level 1 1`] = `
<h1
  aria-label=""
  className="Headline__HeroH1-uipteu-0 Headline__H1-uipteu-1 cXoiEu"
>
  My example headline
</h1>
`;

exports[`Storyshots 4 Components/All/Headline Level 2 1`] = `
<h2
  aria-label=""
  className="Headline__H2-uipteu-2 eeUHts"
>
  My example headline
</h2>
`;

exports[`Storyshots 4 Components/All/Headline Level 3 1`] = `
<h3
  aria-label=""
  className="Headline__H3-uipteu-3 dStTNU"
>
  My example headline
</h3>
`;

exports[`Storyshots 4 Components/All/HeroBasic No Image 1`] = `
<header
  className="HeroBasic__Hero-sc-1q83vkz-0 iaJqQQ"
>
  <h1
    aria-label=""
    className="Headline__HeroH1-uipteu-0 gDIaDW HeroBasic__SizedHeadline-sc-1q83vkz-1 jLbriD"
  >
    Here's some content
  </h1>
  <p
    className="HeroBasic__Standfirst-sc-1q83vkz-2 dKkwSl"
  >
    Here's a standfirst
  </p>
</header>
`;

exports[`Storyshots 4 Components/All/HeroBasic Normal 1`] = `
<header
  className="HeroBasic__Hero-sc-1q83vkz-0 dmtslI"
>
  <h1
    aria-label=""
    className="Headline__HeroH1-uipteu-0 gDIaDW HeroBasic__SizedHeadline-sc-1q83vkz-1 jLbriD"
  >
    Here's some content
  </h1>
  <p
    className="HeroBasic__Standfirst-sc-1q83vkz-2 dKkwSl"
  >
    Here's a standfirst
  </p>
</header>
`;

exports[`Storyshots 4 Components/All/LFF IWC Banner LFF Example 1`] = `
<div
  className="LFFIWCBanner__Outer-sc-1kjs2n9-0 dIvJQk"
>
  <div
    className="LFFIWCBanner__Content-sc-1kjs2n9-1 kiCBVH"
  >
    <p
      className="LeadParagraph__Outer-sc-1bghl13-0 boLSbq lead_paragraph"
      dangerouslySetInnerHTML={
        Object {
          "__html": "The 2020 BFI London Film Festival will be the first ever edition of the Festival to be widely accessible across the UK, with 50 Virtual Festival Premieres to be enjoyed at home.",
        }
      }
    />
    <a
      className="Button__PrimaryButton-sc-1bcggl7-0 eeAcNk"
      href="http://bfi.org"
      title={false}
    >
      Your guide to the festival
    </a>
  </div>
  <div
    className="LFFIWCBanner__IWC-sc-1kjs2n9-2 kZotLP"
  >
    <div
      className="LFFIWCBanner__WatchContainer-sc-1kjs2n9-9 ljBIVU"
    >
      <img
        alt=""
        className="LFFIWCBanner__Watch-sc-1kjs2n9-10 bASrsy"
      />
      <img
        alt=""
        className="LFFIWCBanner__HourHand-sc-1kjs2n9-13 iofiOS"
      />
      <img
        alt=""
        className="LFFIWCBanner__MinHand-sc-1kjs2n9-12 hRIIoY"
      />
      <img
        alt=""
        className="LFFIWCBanner__SecondHand-sc-1kjs2n9-11 fMWhFk"
      />
    </div>
    <div
      className="LFFIWCBanner__CountdownContainer-sc-1kjs2n9-3 hTrWkv"
    >
      <div
        className="LFFIWCBanner__CountdownContainerInner-sc-1kjs2n9-4 iHmzWv"
      >
        <div
          className="LFFIWCBanner__TimeContainer-sc-1kjs2n9-6 jeKcfE"
        >
          <p
            className="LFFIWCBanner__Time-sc-1kjs2n9-7 eMFKw"
          />
          <p
            className="LFFIWCBanner__Time-sc-1kjs2n9-7 LFFIWCBanner__TimeTitle-sc-1kjs2n9-8 hXwODk"
          >
            Days
          </p>
        </div>
        <div
          className="LFFIWCBanner__TimeContainer-sc-1kjs2n9-6 jeKcfE"
        >
          <p
            className="LFFIWCBanner__Time-sc-1kjs2n9-7 eMFKw"
          />
          <p
            className="LFFIWCBanner__Time-sc-1kjs2n9-7 LFFIWCBanner__TimeTitle-sc-1kjs2n9-8 hXwODk"
          >
            Hours
          </p>
        </div>
        <div
          className="LFFIWCBanner__TimeContainer-sc-1kjs2n9-6 jeKcfE"
        >
          <p
            className="LFFIWCBanner__Time-sc-1kjs2n9-7 eMFKw"
          />
          <p
            className="LFFIWCBanner__Time-sc-1kjs2n9-7 LFFIWCBanner__TimeTitle-sc-1kjs2n9-8 hXwODk"
          >
            Mins
          </p>
        </div>
        <a
          href="https://www.iwc.com/gb/en/home.html"
          title="Go to IWC's website"
        >
          <img
            alt="IWC Schaffhausen"
            className="LFFIWCBanner__LogoImg-sc-1kjs2n9-5 dWGwSp"
          />
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots 4 Components/All/Landmark Normal 1`] = `
<main
  className="Landmark-sc-1gbl5hq-0 llEzaj"
>
  <section>
    Landmark content
  </section>
</main>
`;

exports[`Storyshots 4 Components/All/Lead paragraph Normal 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <p
    className="LeadParagraph__Outer-sc-1bghl13-0 boLSbq lead_paragraph"
    dangerouslySetInnerHTML={
      Object {
        "__html": "We gotta burn the rain forest, dump toxic waste, pollute the air, and rip up the OZONE! 'Cause maybe if we screw up this planet enough, they won't want it anymore! We gotta burn the rain forest, dump toxic waste, pollute the air, and rip up the OZONE! 'Cause maybe if we screw up this planet enough, they won't want it anymore!",
      }
    }
  />
</div>
`;

exports[`Storyshots 4 Components/All/Newsletter Sign Up Example 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="NewsletterSignUp__Outer-sc-149eopm-0 iutSYG"
  >
    <p
      aria-label=""
      className="Headline__H3Fake-uipteu-4 gypECg h3"
    >
      Get the latest from the BFI
    </p>
    <p>
      Sign up for BFI news, features, videos and podcasts.
    </p>
    <form
      action="https://www.createsend.com/t/subscribeerror? description="
      className="NewsletterSignUp__NewsletterForm-sc-149eopm-1 fmmqZb js-cm-form"
      data-id="191722FC90141D02184CB1B62AB3DC26D57AD7AD0DF253BE15DD122C605B740244DFF1ADDEE1A8DA861127EDFD99BF281A7016BD9F175EAF91CB858CC76D303F"
      id="subForm"
      method="post"
    >
      <label
        className="NewsletterSignUp__NewsletterLabel-sc-149eopm-2 hKlglB"
      >
        Email
        <input
          aria-label="Email"
          autoComplete="Email"
          className="js-cm-email-input qa-input-email"
          id="fieldEmail"
          maxLength="200"
          name="cm-ydyddhy-ydyddhy"
          placeholder="Your email..."
          required={true}
          title="Your Email (required)"
          type="email"
        />
      </label>
      <button
        className="NewsletterSignUp__SubmitButton-sc-149eopm-3 dfVZyp"
        type="submit"
      >
        Sign up
      </button>
    </form>
  </div>
</div>
`;

exports[`Storyshots 4 Components/All/Oembed Vimeo 1`] = `
<div
  className="Oembed__VideoContainer-sc-1urwub5-0 dPrnAp"
>
  <iframe
    allow="autoplay; fullscreen"
    allowFullScreen={true}
    height="270"
    src="https://player.vimeo.com/video/143029218?app_id=122963?texttrack=en"
    title="Film is Fragile - Film needs your help! | BFI Trailer"
    width="480"
  />
</div>
`;

exports[`Storyshots 4 Components/All/Oembed Youtube 1`] = `
<div
  className="Oembed__VideoContainer-sc-1urwub5-0 dPrnAp"
>
  <iframe
    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
    allowFullScreen={true}
    height="270"
    src="https://www.youtube.com/embed/vpqYxK6mmSU?feature=oembed&cc_load_policy=1"
    title="Misbehaviour director Phillipa Lowthorpe and producer Suzanne Mackie | BFI Q&A video"
    width="480"
  />
</div>
`;

exports[`Storyshots 4 Components/All/Programme Banner LFF Example 1`] = `
<div
  className="ProgrammeBannerTop__Outer-sc-188gsmt-0 cmyScT"
>
  <div
    className="ProgrammeBannerTop__Banner-sc-188gsmt-2 lokfkm"
  />
</div>
`;

exports[`Storyshots 4 Components/All/Programme Banner No Image Example 1`] = `""`;

exports[`Storyshots 4 Components/All/StepByStep Primary 1`] = `
<div
  style={
    Object {
      "maxWidth": "350px",
      "padding": "20px",
    }
  }
>
  <section
    className="StepByStep__Outer-sc-13ccit5-0 kyopej"
  >
    <h3
      className="StepByStep__Headline-sc-13ccit5-1 iKeGFK"
    >
      Applying for film funding
    </h3>
    <ol
      className="StepByStep__Steps-sc-13ccit5-2 gtmhSG"
    >
      <li
        className="StepByStep__Step-sc-13ccit5-3 gEcOtB"
      >
        <button
          aria-expanded="false"
          className="StepByStep__ShowButton-sc-13ccit5-5 fZrqAZ"
          onClick={[Function]}
        >
          <strong
            className="StepByStep__StepTitle-sc-13ccit5-4 fntfjb"
          >
            Is this fund right for you?
          </strong>
          <span
            className="StepByStep__ShowButtonText-sc-13ccit5-6 kLeUyt"
          >
            Show
          </span>
        </button>
      </li>
      <li
        className="StepByStep__Step-sc-13ccit5-3 gEcOtB"
      >
        <button
          aria-expanded="false"
          className="StepByStep__ShowButton-sc-13ccit5-5 fZrqAZ"
          onClick={[Function]}
        >
          <strong
            className="StepByStep__StepTitle-sc-13ccit5-4 fntfjb"
          >
            Prepare your supporting materials
          </strong>
          <span
            className="StepByStep__ShowButtonText-sc-13ccit5-6 kLeUyt"
          >
            Show
          </span>
        </button>
      </li>
      <li
        className="StepByStep__Step-sc-13ccit5-3 gEcOtB"
      >
        <button
          aria-expanded="false"
          className="StepByStep__ShowButton-sc-13ccit5-5 fZrqAZ"
          onClick={[Function]}
        >
          <strong
            className="StepByStep__StepTitle-sc-13ccit5-4 fntfjb"
          >
            Apply
          </strong>
          <span
            className="StepByStep__ShowButtonText-sc-13ccit5-6 kLeUyt"
          >
            Show
          </span>
        </button>
      </li>
      <li
        className="StepByStep__Step-sc-13ccit5-3 gEcOtB"
      >
        <button
          aria-expanded="false"
          className="StepByStep__ShowButton-sc-13ccit5-5 fZrqAZ"
          onClick={[Function]}
        >
          <strong
            className="StepByStep__StepTitle-sc-13ccit5-4 fntfjb"
          >
            Wait to hear from us
          </strong>
          <span
            className="StepByStep__ShowButtonText-sc-13ccit5-6 kLeUyt"
          >
            Show
          </span>
        </button>
      </li>
      <li
        className="StepByStep__Step-sc-13ccit5-3 gEcOtB"
      >
        <button
          aria-expanded="false"
          className="StepByStep__ShowButton-sc-13ccit5-5 fZrqAZ"
          onClick={[Function]}
        >
          <strong
            className="StepByStep__StepTitle-sc-13ccit5-4 fntfjb"
          >
            Your decision
          </strong>
          <span
            className="StepByStep__ShowButtonText-sc-13ccit5-6 kLeUyt"
          >
            Show
          </span>
        </button>
      </li>
    </ol>
  </section>
</div>
`;

exports[`Storyshots 4 Components/All/Tabs Primary 1`] = `
<div
  style={
    Object {
      "maxWidth": "650px",
      "padding": "20px",
    }
  }
>
  <ul
    className="Tabs__Outer-sc-1agjg5j-0 jEuVhc"
    role="tablist"
  >
    <li
      className="Tabs__Li-sc-1agjg5j-1 bvaAvO"
      role="presentation"
    >
      <button
        aria-selected={true}
        className="Tabs__Button-sc-1agjg5j-2 iouJCf"
        id="tab1"
        onClick={[Function]}
        role="tab"
      >
        Highlight
      </button>
    </li>
    <li
      className="Tabs__Li-sc-1agjg5j-1 hCzEyH"
      role="presentation"
    >
      <button
        aria-selected={false}
        className="Tabs__Button-sc-1agjg5j-2 eDAauM"
        id="tab2"
        onClick={[Function]}
        role="tab"
      >
        Showing today
      </button>
    </li>
    <li
      className="Tabs__Li-sc-1agjg5j-1 hCzEyH"
      role="presentation"
    >
      <button
        aria-selected={false}
        className="Tabs__Button-sc-1agjg5j-2 eDAauM"
        id="tab3"
        onClick={[Function]}
        role="tab"
      >
        Showing this week
      </button>
    </li>
  </ul>
  <section
    aria-labelledby="tab1"
    hidden={false}
    id="section1"
    role="tabpanel"
  >
    Tab 1 content
  </section>
  <section
    aria-labelledby="tab1"
    hidden={true}
    id="section2"
    role="tabpanel"
  >
    Tab 2 content
  </section>
  <section
    aria-labelledby="tab1"
    hidden={true}
    id="section3"
    role="tabpanel"
  >
    Tab 3 content
  </section>
</div>
`;

exports[`Storyshots 4 Components/All/Tag Primary 1`] = `
<div
  className="Tag__Outer-sc-52ct56-0 vnfCP tag"
>
  Example tag
</div>
`;

exports[`Storyshots 4 Components/All/TemporaryAnnouncement Normal 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <hr
    className="Divider__Break-sc-8d5zpt-0 EusRW"
  />
  <div
    className="TemporaryAnnouncement__Outer-aytkrc-0 diKmKL temporary_announcement"
  >
    <p>
      We gotta burn the rain forest, 
      <strong>
        dump toxic waste
      </strong>
      , pollute the air, and 
      <a
        href="http://google.com"
      >
        rip up the OZONE!
      </a>
       'Cause maybe if we screw up this planet enough, they won't want it anymore! We gotta burn the rain forest, dump toxic waste, pollute the air, and rip up the OZONE! 'Cause maybe if we screw up this planet enough, they won't want it anymore!
    </p>
    <ol>
      <li>
        What do they got in there? King Kong?
      </li>
      <li>
        You really think you can fly that thing?
      </li>
      <li>
        Must go faster
      </li>
    </ol>
    <p>
      You really think you can fly that thing? Eventually, you do plan to have dinosaurs on your dinosaur tour, right? 
      <a
        href="http://google.com"
      >
        I gave it a cold?
      </a>
       I gave it a virus. A computer virus. Did he just throw my cat out of the window? You're a very talented young man, with your own clever thoughts and ideas. Do you need a manager?
    </p>
    <ul>
      <li>
        What do they got in there? King Kong?
      </li>
      <li>
        You really think you can fly that thing?
      </li>
      <li>
        Must go faster
      </li>
    </ul>
  </div>
  <hr
    className="Divider__Break-sc-8d5zpt-0 EusRW"
  />
</div>
`;

exports[`Storyshots 4 Components/All/Text Normal 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="Text__Outer-sc-1wo6lq-0 hHACLK text_block"
  >
    <p>
      We gotta burn the rain forest, 
      <strong>
        dump toxic waste
      </strong>
      , pollute the air, and 
      <a
        href="http://google.com"
      >
        rip up the OZONE!
      </a>
       'Cause maybe if we screw up this planet enough, they won't want it anymore! We gotta burn the rain forest, dump toxic waste, pollute the air, and rip up the OZONE! 'Cause maybe if we screw up this planet enough, they won't want it anymore!
    </p>
    <ol>
      <li>
        What do they got in there? King Kong?
      </li>
      <li>
        You really think you can fly that thing?
      </li>
      <li>
        Must go faster
      </li>
    </ol>
    <p>
      You really think you can fly that thing? Eventually, you do plan to have dinosaurs on your dinosaur tour, right? 
      <a
        href="http://google.com"
      >
        I gave it a cold?
      </a>
       I gave it a virus. A computer virus. Did he just throw my cat out of the window? You're a very talented young man, with your own clever thoughts and ideas. Do you need a manager?
    </p>
    <ul>
      <li>
        What do they got in there? King Kong?
      </li>
      <li>
        You really think you can fly that thing?
      </li>
      <li>
        Must go faster
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots CaptionedImage Normal 1`] = `
<figure
  className="CaptionedImage__Figure-sc-1oce98k-0 geBhVy"
>
  <img
    alt="Alt text"
    src="http://example.com"
  />
  <figcaption
    className="CaptionedImage__FigCaptionWrapper-sc-1oce98k-1 dSsbsf"
    tabIndex="0"
  >
    <div
      className="CaptionedImage__FigCaptionContents-sc-1oce98k-2 ijFVQV"
    >
      Caption goes here
    </div>
  </figcaption>
</figure>
`;

exports[`Storyshots IntroBlock Full 1`] = `
<div
  className="IntroBlock__IntroBlockWrapper-sc-1hzzhy-0 hiAVp"
>
  <figure
    className="CaptionedImage__Figure-sc-1oce98k-0 geBhVy"
  >
    <img
      alt="Alt text"
      src="http://example.com/img.jpg"
    />
    <figcaption
      className="CaptionedImage__FigCaptionWrapper-sc-1oce98k-1 dSsbsf"
      tabIndex="0"
    >
      <div
        className="CaptionedImage__FigCaptionContents-sc-1oce98k-2 ijFVQV"
      >
        Caption text is here
        <cite>
          Copyright text goes here
        </cite>
      </div>
    </figcaption>
  </figure>
  <div>
    <h1
      aria-label=""
      className="Headline__HeroH1-uipteu-0 Headline__H1-uipteu-1 cXoiEu"
    >
      Page title
    </h1>
    <p
      className="LeadParagraph__Outer-sc-1bghl13-0 boLSbq lead_paragraph"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Page standfirst text is here",
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots IntroBlock No Copyright 1`] = `
<div
  className="IntroBlock__IntroBlockWrapper-sc-1hzzhy-0 hiAVp"
>
  <figure
    className="CaptionedImage__Figure-sc-1oce98k-0 geBhVy"
  >
    <img
      alt="Alt text"
      src="http://example.com/img.jpg"
    />
    <figcaption
      className="CaptionedImage__FigCaptionWrapper-sc-1oce98k-1 dSsbsf"
      tabIndex="0"
    >
      <div
        className="CaptionedImage__FigCaptionContents-sc-1oce98k-2 ijFVQV"
      >
        Caption text is here
      </div>
    </figcaption>
  </figure>
  <div>
    <h1
      aria-label=""
      className="Headline__HeroH1-uipteu-0 Headline__H1-uipteu-1 cXoiEu"
    >
      Page title
    </h1>
    <p
      className="LeadParagraph__Outer-sc-1bghl13-0 boLSbq lead_paragraph"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Page standfirst text is here",
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots IntroBlock No Image 1`] = `
<div
  className="IntroBlock__IntroBlockWrapper-sc-1hzzhy-0 hiAVp"
>
  <div>
    <h1
      aria-label=""
      className="Headline__HeroH1-uipteu-0 Headline__H1-uipteu-1 cXoiEu"
    >
      Page title
    </h1>
    <p
      className="LeadParagraph__Outer-sc-1bghl13-0 boLSbq lead_paragraph"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Page standfirst text is here",
        }
      }
    />
  </div>
</div>
`;
